result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    app: result
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: result
