traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-public
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
      nodePort: 30021
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
      nodePort: 30042
