result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  labels:
    app: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: result.dop.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-service
            port: 
              number: 80
